[metadata]
name = pyspod
version = attr: pyspod.__version__
description = Python Spectral Proper Orthogonal Decomposition
long_description = file:README.md
long_description_content_type = text/markdown
author = Gianmarco Mengaldo, Lisandro Dalcin Romit Maulik, Andrea Lario
author_email = mpegim@nus.edu.sg, dalcinl@gmail.com, rmaulik@anl.gov, alario@sissa.it
url = https://github.com/mathe-lab/PySPOD
license = MIT
license_files = LICENSE.rst
keywords =
    SPOD
    spectral proper orthogonal decomposition
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.6
install_requires =
    psutil
    tqdm
    numpy
    scipy
    h5py
    netcdf4
    xarray
    matplotlib
    pyyaml

[options.package_data]
pyspod =
    plotting_support/coast.mat
    plotting_support/coast_centred.mat

[options.extras_require]
ai = tensorflow
mpi = mpi4py
test =
    pytest
docs =
    Sphinx
    sphinx_rtd_theme
