[metadata]
name = pyspod
version = attr: pyspod.__version__
description = Python Spectral Proper Orthogonal Decomposition
long_description = file:README.md
long_description_content_type = text/markdown
author = Gianmarco Mengaldo, Marcin Rogoswki, Lisandro Dalcin, Romit Maulik, Andrea Lario
author_email = mpegim@nus.edu.sg, marcin.rogowski@gmail.com, dalcinl@gmail.com, rmaulik@anl.gov, alario@sissa.it
url = https://github.com/MathEXLab/PySPOD
license = MIT
license_files = LICENSE.rst
keywords =
    SPOD
    spectral proper orthogonal decomposition
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages = find_namespace:
zip_safe = False
include_package_data = True
python_requires = >=3.7
install_requires =
    importlib-metadata<5.0; python_version < '3.8'
    psutil
    tqdm
    numpy
    scipy
    h5py
    netcdf4
    xarray
    matplotlib
    pyyaml

[options.package_data]
pyspod.utils.plotting_support =
    coast.mat
    coast_centred.mat

[options.extras_require]
ai = tensorflow
mpi = mpi4py
test =
    pytest
    pytest-cov
    pytest-mpi
    coverage
docs =
    Sphinx
    sphinx_rtd_theme

[coverage:run]
parallel = True
branch = True
source = pyspod
[coverage:paths]
source =
  ./pyspod
  */pyspod
